Store jobs in a repository so different persistence implementations can be provided. Default is for now an in-memory repository. Prepare for recurring jobs. JobExecutor functionality is now covered by the job manager.

--- a/WhenDoJobsApp/WhenDoJobsApp.csproj
+++ b/WhenDoJobsApp/WhenDoJobsApp.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\WhenDoJobs.Core\WhenDoJobs.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="sample-conf.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
