Add Job type (schedule or message) Implement scheduled jobs Add get with predicate method to repository Run jobs on threadpool thread

--- a/WhenDoJobsApp/WhenDoJobsApp.csproj
+++ b/WhenDoJobsApp/WhenDoJobsApp.csproj
@@ -19,7 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="sample-conf.json">
+    <None Update="message-job.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="recurring-job.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
